// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup should change icon class prefix when using icon-prefix prop 1`] = `
<div
  class="rc-popup rc-popup--center"
  style="z-index: 2003; animation-duration: 300ms;"
>
  <i
    class="rc-badge__wrapper rc-popup__close-icon rc-popup__close-icon--top-right my-icon my-icon-cross"
  />
</div>
`;

exports[`Popup should not bubble blur event when set preventDefaultMouseDown prop  1`] = `
<div
  class="rc-popup rc-popup--center"
  style="z-index: 2003; animation-duration: 300ms;"
/>
`;

exports[`Popup should render correct close icon when using close-icon prop 1`] = `
<div
  class="rc-popup rc-popup--center"
  style="z-index: 2003; animation-duration: 300ms;"
>
  <i
    class="rc-badge__wrapper rc-popup__close-icon rc-popup__close-icon--top-right van-icon van-icon-success"
  />
</div>
`;
